--- a/forms.html
+++ b/forms.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario</title>
+</head>
+<body>
+    <h1>Formulario de cadastro</h1>
+    <form>
+        <label for="email">Digite seu nome</label>
+        <input type="text" placeholder="Seu nome">
+        <br/>
+        <br/>
+        <label for="email">Informe seu e-mail</label>
+            <input type="email" id="email"placeholder="Seu email">
+            <br/>
+            <br/>
+            <label for="pass">Digite sua senha</label>
+
+            <input placeholder=" limite de 8 digitos" typetype="password" id="pass" name="password" minlength="8" required/>
+        <br/>
+        <br/>
+
+        <button type="submit">Enviar</button>
+        <button type="reset">Limpar</button>
+    </form>
+</body>
