--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>FORM VALIDATION</title>
+    <title>FORM VALIDATION</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Poppins&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
             <form>
                 <div class="form-campo">
                     <label for="nome">Nome completo:</label>
-                    <input type="text" maxlength="30" name="nome" value="" />
+                    <input type="text" maxlength="30" id="nome" name="nome" value="" />
                 </div>
                 <div class="form-campo">
                     <label for="cpf">CPF:</label>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-campo">
                     <label for="tel">Telefone:</label>
-                    <input type="text" id="telefone"name="telefone">
+                    <input type="text" id="tel"name="telefone">
                 </div>
                 <div class="form-campo">
                     <label for="email">E-mail:</label>
